--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <button onclick="showMessage()">ボタンだよ</button>
+    <button onclick="showMessage()">ボタン</button>
     <div id="message">ドンマイあいか</div>
   </div>
 
